# ai-data-agent

./: .env  .env.example  .gitignore  AI-Data-Agent - v4 架构升级技术需求文档.md  AI-HANDOFF-PROMPT.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  F12_VERIFICATION.py  LICENSE  Makefile  README.md  SECURITY.md  alpha_vantage_api.json  check_apis.py  claude-progress.txt  deploy.sh  docker-compose.yml  f24_test_output.txt  feature_list.json  init.sh  nginx.conf  package.json  pyproject.toml  quick_test.sh  sessions.json  start.sh  test.py  test1.py  test3.py  test_anthropic_direct.py  test_approval.py  test_chat.json  test_data_injection.py  test_executor_python.py  test_f09_verification.py  test_f11_restart.json  test_f12_edge_cases.py  test_f12_empty_data.py  (+23 more)
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
agent-core/: AGENT_CORE_README.md
agent-core/app/agent/: graph.py  state.py
backend/: .dockerignore  Dockerfile  F11_FIX_SUMMARY.md  F13_TEST_SUMMARY.md  F19_TEST_SUMMARY.md  F23_RBAC_TEST_REPORT.md  FINAL_TEST.bat  RESTART_AND_TEST.bat  START_SERVER_AND_TEST.bat  alembic.ini  check_and_rebuild_embeddings.py  claude-progress.txt  create_orders_table.py  f24_api_robustness_test.py  ip_test.py  ip_test_result.json  manual_test_math.py  quick_test.py  rbac_e2e_test.py  rbac_final_test.py  rbac_full_test.py  rbac_quick_test.py  rbac_setup.py  rbac_test.py  rbac_verify_permissions.py  requirements.txt  run_create_orders.py  run_e2e_test.py  run_test.py  sessions.json  sse_file.py  sse_test.py  start_and_test.py  test.py  test_checkpoint_e2e.py  test_curl.sh  test_e2e_final.py  test_external_apis.py  test_f01_rbac_direct.py  test_f02_intent_extraction.py  (+55 more)
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/access/: __init__.py
backend/app/agent/: __init__.py  graph.py  state.py
backend/app/api/: __init__.py  dependencies.py
backend/app/config/: __init__.py  api_config.py  embedding_config.py  llm_config.py  settings.py
backend/app/models/: __init__.py  api_permission.py  chat.py  permission.py  tool.py  user.py
backend/app/services/: __init__.py  api_permission_service.py  api_retrieval_service.py  cia_service.py  conversation_service.py  credit_service.py  suggestion_service.py  user_service.py  vector_store.py
backend/app/utils/: __init__.py  crypto_utils.py  datetime_utils.py  exceptions.py  format_utils.py  helpers.py  id_utils.py  llm_cache.py  logger.py  serialization.py
backend/backend/: test_f12_q2.json  test_f12_q3.json
backend/data/: checkpoints.db  checkpoints.db-shm  checkpoints.db-wal  credit_logs.json  users.json
backend/data/conversations/: admin.json  user_001.json  user_002.json  user_278029ad.json
backend/exports/: export_20260312_170625_ba02e42e.xlsx  export_20260312_201821_274ae53c.xlsx  export_20260313_172150_55af2c13.xlsx  export_20260313_174257_fe13101f.xlsx  export_20260313_174443_dd07a914.xlsx  export_20260313_182504_c6520c81.xlsx  export_20260316_102051_33164edd.xlsx
backend/scripts/: migrate_admin_to_cia.sql  migrate_zhangsan_apis.py  run_migration.py
backend/tests/: __init__.py  conftest.py  test_analyzer_node.py  test_e2e_math_scenarios.py  test_executor_node.py  test_llm_client.py  test_planner_node.py  test_python_exec_tool.py  test_react_circuit_breaker.py
data/: checkpoints.db  checkpoints.db-shm  checkpoints.db-wal  test_checkpoints.db-shm  test_checkpoints.db-wal
data/qdrant/: meta.json
docs/: README.md  REQUESTS_2026-04-15.md  architecture-v4.md
examples/: README.md
frontend/: .eslintrc.cjs  .prettierrc  index.html  test.html
frontend/css/: admin.css  base.css  chat.css
frontend/js/: api-management.js  api-permission.js  api.js  app-setup.js  app-template.js  app.js  auth.js  cia-auth.js  state.js  utils.js
scripts/: init_database.py  migrate_json_to_db.py  register_ip_api.py  register_mock_apis.py  register_mock_apis_to_db.py  register_weather_api.py
(+85 files in other folders)
