[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-data-agent"
version = "1.0.0"
description = "Enterprise-level AI data analysis agent with natural language queries, API retrieval, and intelligent SQL generation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "AI Data Agent Team"},
]
keywords = [
    "ai-agent",
    "data-analysis",
    "llm",
    "langgraph",
    "fastapi",
    "natural-language-query",
    "sql-generation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
]

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    "psycopg2-binary>=2.9.0",
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "python-jose>=3.3.0",
    "passlib>=1.7.4",
    "bcrypt>=4.0.0",
    "httpx>=0.24.0",
    "aiohttp>=3.8.0",
    "aiomysql>=0.2.0",
    "asyncpg>=0.28.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.0.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=1.0.0",
    "aiosqlite>=0.17.0",
    "numpy>=1.24.0",
    "qdrant-client>=1.7.0",
    "cryptography>=41.0.0",
    "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.24.0",
    "pre-commit>=3.6.0",
    "bandit>=1.7.7",
]

[project.urls]
Homepage = "https://github.com/slx-romantic-man/ai-data-agent"
Documentation = "https://github.com/slx-romantic-man/ai-data-agent#readme"
Repository = "https://github.com/slx-romantic-man/ai-data-agent"
Issues = "https://github.com/slx-romantic-man/ai-data-agent/issues"

[tool.setuptools.packages.find]
where = ["backend"]
include = ["app*"]

# ── Ruff Configuration ──────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [
    ".venv",
    "node_modules",
    "agent-core",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults (FastAPI Depends)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ── Mypy Configuration ──────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    ".venv",
    "node_modules",
]

# ── Pytest Configuration ────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

# ── Coverage Configuration ──────────────────────────────────────────────────
[tool.coverage.run]
source = ["backend/app"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
